--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "mayonteam",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
-    "firebase": "^4.3.1",
+    "bootstrap": "4.0.0",
+    "firebase": "^4.12.1",
     "font-awesome": "^4.7.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-loadable": "^4.0.5",
-    "react-redux": "^5.0.6",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13",
-    "recompose": "^0.25.0",
+    "react-scripts": "1.1.4",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write \"{src,__{tests,mocks}__}/**/*.js\""
+  },
+  "devDependencies": {
+    "prettier": "1.11.1"
   }
 }
