--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "mayonteam",
+  "name": "helloapp",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0",
-    "firebase": "^4.12.1",
-    "font-awesome": "^4.7.0",
+    "firebase": "7.15.0",
+    "font-awesome": "4.7.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "recompose": "^0.26.0",
-    "redux": "^3.7.2"
+    "react-scripts": "3.4.1",
+    "recompose": "0.26.0",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,5 +25,17 @@
   },
   "devDependencies": {
     "prettier": "1.11.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
