--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "bootstrap": "4.0.0",
     "firebase": "7.15.0",
     "font-awesome": "4.7.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "recompose": "0.26.0",
     "redux": "3.7.2"
