--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-loadable": "^5.3.1",
-    "react-redux": "^5.0.7",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "recompose": "0.26.0",
-    "redux": "3.7.2"
+    "recompose": "0.26.0"
   },
   "scripts": {
     "start": "react-scripts start",
