--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.0.0",
+    "bootstrap": "4.5.0",
     "firebase": "7.15.0",
     "font-awesome": "4.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-loadable": "^5.3.1",
+    "@loadable/component": "5.13.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "recompose": "0.26.0"
