--- a/package.json
+++ b/package.json
@@ -1,41 +1,38 @@
 {
-  "name": "helloapp",
-  "version": "0.3.0",
+  "name": "vite-saas",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.6.0",
-    "firebase": "8.2.7",
-    "font-awesome": "4.7.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
     "@loadable/component": "5.14.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.2",
-    "recompose": "0.30.0"
+    "bootstrap": "4.6.0",
+    "firebase": "9.15.0",
+    "font-awesome": "4.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.6.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "coverage": "vitest run --coverage",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "prettier": "prettier --write \"{src,__{tests,mocks}__}/**/*.js\""
   },
   "devDependencies": {
-    "prettier": "2.2.1"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/loadable__component": "5.13.4",
+    "@testing-library/react": "13.4.0",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/react-router-dom": "5.3.3",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "prettier": "2.2.1",
+    "vite": "^4.0.3",
+    "vite-plugin-pwa": "0.14.0",
+    "vitest": "^0.26.2",
+    "jsdom": "20.0.3"
   }
 }
